빌드 스크립트 추가